@@ -120,6 +120,10 @@ void
 rsvg_filter_adobe_blend(gint modenum, GdkPixbuf *in, GdkPixbuf *bg, GdkPixbuf *output,
 						RsvgHandle * ctx);
 
+void
+rsvg_alpha_blt (GdkPixbuf * src, gint srcx, gint srcy, gint srcwidth,
+				gint srcheight, GdkPixbuf * dst, gint dstx, gint dsty);
+
 G_END_DECLS
 
 #endif
